Moving towards a release. Updated bot and put templates into responses. Basic error catching.

--- a/anxietybox/src/resources/templates/anxiety.mustache
+++ b/anxietybox/src/resources/templates/anxiety.mustache
@@ -5,16 +5,17 @@
     <p>I can't believe you think you can actually complete {{project}}.</p>
 
     <p>Can you name ONE THING you have ever finished? Think about
-it.  You've never finished anything, as far as I can tell. Just
-prove me wrong by telling me about ONE THING that you completed and
-how you did it. No one has every been worse at finishing things than
-you have.</p>
+      it.  You've never finished anything, as far as I can tell.</p>
+
+    <p>Just prove me wrong by telling me about ONE THING that you
+completed and how you did it. No one has every been worse at
+finishing things than you have.</p>
 
     <p>Sincerely,</p>
 
-    <p>Your Anxiety</p>
+    <p>Anxiety</p>
 
     <hr/>
-    <p>No more emails: http://anxietybox.com/block/{{confirm}}
+    <p>Delete your account: http://anxietybox.com/delete/{{confirm}}
   </body>
 </html>
