Updated confirm template.

--- a/anxietybox/src/resources/templates/activate.mustache
+++ b/anxietybox/src/resources/templates/activate.mustache
@@ -1,8 +1,12 @@
-<html>
-  <body>
-    <p>Dear {{fullname}},</p>
+Dear {{fullname}},
+
+
+You just signed up for Anxietybox.com. Click here to confirm your email:
+
+http://anxietybox.com/activate/{{confirm}}
+
+If you didn't sign up, ignore this email.
     
-    <p><a href="http://anxietybox.com/activate/{{confirm}}">Click here to activate your account</a>
-    http://localhost:3000/activate/{{confirm}}</p>
-  </body>
-</html>
+Best wishes,
+
+Your Anxiety
