Moving to text.

--- a/anxietybox/src/resources/templates/anxiety.mustache
+++ b/anxietybox/src/resources/templates/anxiety.mustache
@@ -1,21 +1,19 @@
-<html>
-  <body>
-    <p>Dear {{fullname}},</p>
-    
-    <p>I can't believe you think you can actually complete {{project}}.</p>
+Dear {{fullname}},
 
-    <p>Can you name ONE THING you have ever finished? Think about
-      it.  You've never finished anything, as far as I can tell.</p>
+I've been thinking a lot about {{project}}.
 
-    <p>Just prove me wrong by telling me about ONE THING that you
-completed and how you did it. No one has every been worse at
-finishing things than you have.</p>
+I don't think you'll ever make any progress. It's pretty much
+hopeless. 
 
-    <p>Sincerely,</p>
+Can you name ONE THING you have ever finished? Think about it.  You've
+never finished anything, as far as I can tell.
 
-    <p>Anxiety</p>
+Just prove me wrong by telling me about ONE THING that you completed
+and how you did it. No one has every been worse at finishing things
+than you have.
 
-    <hr/>
-    <p>Delete your account: http://anxietybox.com/delete/{{confirm}}
-  </body>
-</html>
+Sincerely,
+
+Anxiety
+
+Delete your account: http://anxietybox.com/delete/{{confirm}}
