Adjusting for tense.

--- a/anxietybox/src/resources/templates/anxiety.mustache
+++ b/anxietybox/src/resources/templates/anxiety.mustache
@@ -1,6 +1,6 @@
 Dear {{fullname}},
 
-I've been thinking a lot about {{project}}.
+I've been thinking a lot about your goal of "{{project}}."
 
 I don't think you'll ever make any progress. It's pretty much
 hopeless. 
